tests/reference/asr-continue_compilation_ff_1-dbe0a43.stderr
syntax error: Newline is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:30:14
   |
30 |       I == 10
   |              ^ 

syntax error: Token '.5' (of type 'real') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:31:14
   |
31 |       J = 20..5
   |              ^^ 

syntax error: Token 'i' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:32:32
   |
32 |       PRINT *, "Value of I is" I
   |                                ^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
  --> tests/errors/continue_compilation_ff_1.f:33:7
   |
33 |       CHARACTER*10 STR = 'Hello  '
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Token 'format' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:34:18
   |
34 |       WRITE(*,10 FORMAT(A))
   |                  ^^^^^^ 

syntax error: Token '*' is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:35:16
   |
35 |       A = B +  * C
   |                ^ 

syntax error: Token '.5' (of type 'real') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:38:20
   |
38 |       REAL X Y Z 10.5
   |                    ^^ 

syntax error: Newline is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:39:27
   |
39 |       COMPLEX C = (1.0,2.0
   |                           ^ 

syntax error: Token '=' is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:41:11
   |
41 |       I === 10
   |           ^ 

syntax error: Token 'e' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:42:14
   |
42 |       J = .20E
   |              ^ 

syntax error: Token '.45' (of type 'real') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:43:22
   |
43 |       REAL*8 A = 1.23.45
   |                      ^^^ 

syntax error: Token '/' is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:46:20
   |
46 |       INTEGER*4 VAR/5/
   |                    ^ 

syntax error: Token 'thenprint' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:91:20
   |
91 |       IF I .EQ. 10 THEN PRINT *, "Ten"
   |                    ^^^^^^^^^^ 

syntax error: Newline is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:92:23
   |
92 |       CALL FUNC( 5, 6,
   |                       ^ 

semantic error: Variable 'bc' is not declared
  --> tests/errors/continue_compilation_ff_1.f:45:25
   |
45 |       COMMON /BLOCK/ A, B C
   |                         ^^^ 'bc' is undeclared

warning: This equivalence statement is not implemented yet, for now we will ignore it
  --> tests/errors/continue_compilation_ff_1.f:47:7
   |
47 |       EQUIVALENCE (X Y)
   |       ^^^^^^^^^^^^^^^^^ ignored for now

semantic error: Variable 'integerklm' is not declared
  --> tests/errors/continue_compilation_ff_1.f:36:7
   |
36 |       INTEGER K L M = 5
   |       ^^^^^^^^^^^^^ 'integerklm' is undeclared

semantic error: Variable 'n5' is not declared
  --> tests/errors/continue_compilation_ff_1.f:37:15
   |
37 |       READ *, N 5
   |               ^^^ 'n5' is undeclared

semantic error: Function 'format' not found (not user defined nor intrinsic)
  --> tests/errors/continue_compilation_ff_1.f:40:19
   |
40 |       WRITE(*,10) FORMAT(A, I5)
   |                   ^^^^^^^^^^^^^ 

semantic error: Variable 'do20i' is not declared
  --> tests/errors/continue_compilation_ff_1.f:48:7
   |
48 |       DO 20 I = 1 10
   |       ^^^^^^^ 'do20i' is undeclared

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_ff_1.f:50:13
   |
50 |       val = THIS_IMAGE()
   |             ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_ff_1.f:51:7
   |
51 |       CALL CO_SUM(val, RESULT_IMAGE=1)
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_ff_1.f:52:11
   |
52 |       IF (THIS_IMAGE() == 1) THEN
   |           ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_ff_1.f:56:7
   |
56 |       CALL EVENT_QUERY(1, 1, 1)
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
  --> tests/errors/continue_compilation_ff_1.f:63:33
   |
63 |       size_a_2 = SIZE(a_3, KIND=kindvar, DIM=1)
   |                                 ^^^^^^^ 

semantic error: Different `character` lengths 1 and 4 in array constructor
  --> tests/errors/continue_compilation_ff_1.f:65:27
   |
65 |       PRINT *, ["a", "b", "ball", "cat"]
   |                           ^^^^^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
  --> tests/errors/continue_compilation_ff_1.f:66:20
   |
66 |       PRINT *, [1, 2.]
   |                    ^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
  --> tests/errors/continue_compilation_ff_1.f:67:20
   |
67 |       PRINT *, [1, [1., 2.]]
   |                    ^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
  --> tests/errors/continue_compilation_ff_1.f:68:16
   |
68 |       PRINT *, DFLOAT(y_3)
   |                ^^^^^^^^^^^ 

semantic error: Invalid argument type for `dim` or `mask`
  --> tests/errors/continue_compilation_ff_1.f:70:31
   |
70 |       PRINT *, SUM([1, 2, 3], 1.1)
   |                               ^^^ 

semantic error: Too many arguments to call `dint`
  --> tests/errors/continue_compilation_ff_1.f:71:16
   |
71 |       PRINT *, DINT(1.0_8, 8)
   |                ^^^^^^^^^^^^^^ 

semantic error: Argument 1 of dlgama must be of double precision real type
  --> tests/errors/continue_compilation_ff_1.f:72:16
   |
72 |       PRINT *, DLGAMA(2.7)
   |                ^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
  --> tests/errors/continue_compilation_ff_1.f:73:16
   |
73 |       PRINT *, DNINT(1.0_8, 8)
   |                ^^^^^^^^^^^^^^^ 

semantic error: Arguments to dprod must be real(4)
  --> tests/errors/continue_compilation_ff_1.f:74:16
   |
74 |       PRINT *, DPROD(4.23_8, 4.3_8)
   |                ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i_2` is not allowed
  --> tests/errors/continue_compilation_ff_1.f:78:11
   |
78 |           i_2 = j_1 + 1
   |           ^^^ 

semantic error: Step expression (Increment) in DO loop cannot be zero
  --> tests/errors/continue_compilation_ff_1.f:84:22
   |
84 |       DO i_2 = 1, 5, 0
   |                      ^ 

semantic error: Unexpected args, Dreal expects (complex64) as arguments
  --> tests/errors/continue_compilation_ff_1.f:88:16
   |
88 |       PRINT *, DREAL(a_4)
   |                ^^^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
  --> tests/errors/continue_compilation_ff_1.f:90:16
   |
90 |       PRINT *, FLOAT(y_4)
   |                ^^^^^^^^^^ 
